# wasmtime-wasi

./: .gitmodules  COWS.md  Cargo.toml  README.md  WASI.md
docs/: Background.md  Capabilities.md  WASI-api.md  WASI-background.md  WASI-capabilities.md  WASI-documents.md  WASI-intro.md  WASI-manifest.md  WASI-overview.md  WASI-possible-future-features.md  WASI-proposed-CG-subgroup-charter.md  WASI-rationale.md  WASI-some-possible-changes.md  WASI-tutorial.md
lib/cows/: Cargo.toml  README.md  build.rs
lib/cows/src/: instantiate.rs  lib.rs  syscalls.rs  translate.rs  wasm32.rs
lib/jit/: Cargo.toml
lib/jit/src/: context.rs
lib/runtime/: Cargo.toml
lib/runtime/src/: instance.rs
lib/wasi/: Cargo.toml  README.md  build.rs
lib/wasi/js-polyfill/: build.sh  polyfill.c  shell.html  wasi.js
lib/wasi/sandboxed-system-primitives/: CMakeLists.txt  LICENSE  README.md
lib/wasi/sandboxed-system-primitives/include/: README.md  wasi_syscalls.h  wasi_syscalls_info.h  wasi_types.h  wasi_types_common.h  wasmtime_ssp.h
lib/wasi/sandboxed-system-primitives/polyfill/: build.sh  polyfill.c  wasi.js
lib/wasi/sandboxed-system-primitives/src/: README.md  config.h  futex.c  futex.h  locking.h  posix.c  posix.h  queue.h  random.c  random.h  refcount.h  rights.h  signals.h  str.c  str.h  tidpool.c  tidpool.h
lib/wasi/src/: instantiate.rs  syscalls.rs  translate.rs  wasm32.rs
src/: wasmtime.rs
